force-app/main/default/objects/Refer_Friend__c/Refer_Friend__c.object-meta.xml
<CustomObject>
    <label>Refer Friend</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refer Friends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>