force-app/main/default/objects/Refer_Friend__c/fields/CC_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Status__c</fullName>
    <label>CC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mql</fullName>
            </value>
            <value>
                <fullName>nmql</fullName>
            </value>
            <value>
                <fullName>noco</fullName>
            </value>
            <value>
                <fullName>callback</fullName>
            </value>
            <value>
                <fullName>callback1</fullName>
            </value>
            <value>
                <fullName>callback2</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>