force-app/main/default/objects/Refer_Friend__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Refer Friends</relationshipLabel>
    <relationshipName>Refer_Friends</relationshipName>
    <type>Lookup</type>
</CustomField>