force-app/main/default/objects/Refer_Friend__c/fields/Contact_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Contact_Pincode__c</fullName>
    <formula>Contact_Name__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Pincode</label>
    <type>Text</type>
</CustomField>