force-app/main/default/objects/Refer_Friend__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Refer Friends</relationshipLabel>
    <relationshipName>Refer_Friends</relationshipName>
    <type>Lookup</type>
</CustomField>