force-app/main/default/objects/Refer_Friend__c/fields/Sent_First_Mail__c.field-meta.xml
<CustomField>
    <fullName>Sent_First_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent First Mail</label>
    <type>Checkbox</type>
</CustomField>